# play_rust

./: Cargo.toml  deny.toml  licenses.txt
.cargo/: config.toml
attribution/: dependencies.toml  self.toml
src/: adn.rs  main.rs
