[package]
name = "play_rust"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2" }
itertools = "0.12.0"
tap = "1.0.1"
# rstest = "0.18.2"
# rayon = "1.8.1"
# const_panic = "0.2.8"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_global_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

# cargo clippy
# bacon clippy

[profile.release]
# opt-level = 3
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"


# cargo deny check
# cargo msrv
# cargo semver check
